mchassig: fix: apply design to CustomCreate scrollbar

--- a/apps/front/src/windows/Play/CreateGame/CreateCustom.css
+++ b/apps/front/src/windows/Play/CreateGame/CreateCustom.css
@@ -1,125 +1,146 @@
 .create-custom {
-	width: 100%;
-	height: 100%;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	flex: 0 0 1;
-	align-self: stretch;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  align-self: stretch;
 }
 
 .header-createcustom {
-	display: flex;
-	padding: 15px;
-	align-items: center;
-	align-content: center;
-	gap: 10px;
-	align-self: stretch;
-	flex-wrap: wrap;
+  display: flex;
+  padding: 15px;
+  align-items: center;
+  align-content: center;
+  gap: 10px;
+  align-self: stretch;
+  flex-wrap: wrap;
+}
+
+::-webkit-scrollbar-corner {
+  background-color: none;
 }
 
 .tabs-header-createcustom {
-	display: flex;
-	align-items: center;
-	align-content: center;
-	gap: 15px;
-	flex-wrap: wrap;
+  display: flex;
+  align-items: center;
+  align-content: center;
+  gap: 15px;
+  flex-wrap: wrap;
 }
 
 .preview-header-createcustom {
-	display: flex;
-	flex-direction: column;
-	justify-content: flex-end;
-	align-items: flex-end;
-	gap: 10px;
-	flex: 1 0 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: flex-end;
+  gap: 10px;
+  flex: 1 0 0;
 }
 
 .preview-header-createcustom .Button {
-    align-self: flex-end;
+  align-self: flex-end;
 }
 
 .body-custom {
-	display: flex;
-	padding: 5px 10px;
-	flex-direction: column;
-	align-items: flex-start;
-	gap: 10px;
-	flex: 1 0 0;
-	align-self: stretch;
-	overflow: scroll;
+  display: flex;
+  padding: 5px 10px;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 10px;
+  flex: 1 0 0;
+  align-self: stretch;
+  overflow: scroll;
 }
 
 .footer-createcustom {
-	width: 100%;
-	display: flex;
-	justify-content: space-between;
-	padding: 5px 0px;
-	gap: 10px;
-	align-self: stretch;
-	flex-wrap: wrap;
-	align-items: center;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  padding: 5px 0px;
+  gap: 10px;
+  align-self: stretch;
+  flex-wrap: wrap;
+  align-items: center;
 }
 
 .div-footer-createcustom {
-	padding : 0 65px 0 0;
-	margin: 0 auto;
+  padding: 0 65px 0 0;
+  margin: 0 auto;
 }
 
 .button-rainbow {
-	display: flex;
-    justify-content: center;
-    align-items: center;
-	padding: 5px 8px;
-	cursor: pointer;
-	border-radius: 8px;
-	outline: 2px solid var(--base-black, #000);
-	border: solid var(--base-white, #fff);
-	border-width: 3px 3px 0;
-	background: var(--custom, linear-gradient(114deg, #FF67BD 4.22%, #BBA0E9 27.61%, #3071D2 48.14%, #09E1C7 72.1%, #FFFC9B 89.78%));
-	
-	/* text */
- 	font-family: Chakra Petch;
-	font-size: 24px;
-	font-style: normal;
-	font-weight: 700;
-	line-height: 24px;
-	text-transform: uppercase;
-	color: var(--text-text-invert, #FFF);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 5px 8px;
+  cursor: pointer;
+  border-radius: 8px;
+  outline: 2px solid var(--base-black, #000);
+  border: solid var(--base-white, #fff);
+  border-width: 3px 3px 0;
+  background: var(
+    --custom,
+    linear-gradient(
+      114deg,
+      #ff67bd 4.22%,
+      #bba0e9 27.61%,
+      #3071d2 48.14%,
+      #09e1c7 72.1%,
+      #fffc9b 89.78%
+    )
+  );
+
+  /* text */
+  font-family: Chakra Petch;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 24px;
+  text-transform: uppercase;
+  color: var(--text-text-invert, #fff);
 }
 
 .button-rainbow:hover {
-	background: var(--custom-reverse, linear-gradient(114deg, #FFFC9B 9.88%, #09E1C7 33.26%, #3071D2 52.09%, #BBA0E9 72.62%, #FF67BD 93.15%));
+  background: var(
+    --custom-reverse,
+    linear-gradient(
+      114deg,
+      #fffc9b 9.88%,
+      #09e1c7 33.26%,
+      #3071d2 52.09%,
+      #bba0e9 72.62%,
+      #ff67bd 93.15%
+    )
+  );
 }
 
 .frame-name {
-	display: flex;
-	align-items: center;
-	gap: 10px;
-	align-self: stretch;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  align-self: stretch;
 }
 
 .label-name {
-    display: flex;
-    align-items: center;
-    color: var(--Base-Black, #000);
-    font-family: Chakra Petch;
-    font-size: 18px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: normal;
- 
+  display: flex;
+  align-items: center;
+  color: var(--Base-Black, #000);
+  font-family: Chakra Petch;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
 }
 
 .placeholder-name {
-	display: flex;
-	min-width: 50px;
-	padding: 5px 8px;
-	align-items: center;
-	gap: 5px;
-	flex: 1 0 0;
-	border-radius: var(--radius-radius-full, 360px);
-	background: var(--Base-White, #FFF);
-	border: none; 
+  display: flex;
+  min-width: 50px;
+  padding: 5px 8px;
+  align-items: center;
+  gap: 5px;
+  flex: 1 0 0;
+  border-radius: var(--radius-radius-full, 360px);
+  background: var(--Base-White, #fff);
+  border: none;
 }
-
